# handwritten_ocr

./: .gitignore  .tool-versions  README.md  app.py  app_canvas.py  app_file_picker.py  config.py  dataset.py  eval.py  metrics.py  model.py  models.config  pyproject.toml  requirements.txt  train.py  utils.py
data/test/: test_csv.csv
data/train/: train.csv
notebooks/: create_word_level_data.ipynb  handwritten-ocr-crnn-v1-inference-part-2.ipynb  handwritten-ocr-crnn-v1-training.ipynb  handwritten_ocr_crnn_training.ipynb  inference_part_one.ipynb  initial_exploration.ipynb  ocr-create-word-level-data.ipynb
saved_model/1/variables/: variables.index
saved_model/2/: keras_metadata.pb
saved_model/2/variables/: variables.index
